# fastapi-legal-document-analyzer-rag

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: main.py  mcp_server.py
app/core/: db.py  settings.py
app/router/: documents.py  search.py  uploads.py
app/services/: documents.py
app/tools/: chunking.py  embeddings.py  id_citations.py  legal_extract.py  pdf.py  rag.py  vectorstore.py
